salvataggio files aggiornato

--- a/dynamic-form-2-il-ritorno/templates/views/dynamicForm.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/dynamicForm.hbs
@@ -12,6 +12,8 @@
                     {{>input}}
                 {{/if}}
             {{/each}}
+            <input type="hidden" name="title" value="{{title}}">
+            <input type="submit" value="send" class="submitButton">
         </form>
     </body>
 </html>
