--- a/dynamic-form-2-il-ritorno/templates/views/dynamicForm.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/dynamicForm.hbs
@@ -9,11 +9,16 @@
                 {{#if (eqSelect type)}}
                     {{>select}}
                 {{else}}
+                    {{#if (eqCheck type)}}
+                        {{>checkbox}}
+                    {{else}}
                     {{>input}}
+                    {{/if}}
                 {{/if}}
             {{/each}}
             <input type="hidden" name="title" value="{{title}}">
             <input type="submit" value="send" class="submitButton">
         </form>
+        <script src="js/form.js"></script>
     </body>
 </html>
