--- a/dynamic-form-2-il-ritorno/templates/views/index.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/index.hbs
@@ -3,38 +3,40 @@
         <link rel="stylesheet" href="/css/index-style.css">
     </head>
     <body>
-        <h1>Dynamic Form</h1>
-        <p>Esempio di Json da inviare per la creazione: </p>
+        <h1>DynForm</h1>
+        <p>Esempio di struttura del JSON: </p>
+        <ul>
+          <li>I campi <i>title</i> e <i>campi</i> sono obbligatori</li>
+          <li>I campi <i>nome</i> e <i>type</i> per ogni elemento sono obbligatori</li>
+        </ul>
         <pre>
 {
-  "title": "ciao",
-  "campi": [
-    { "nome": "Pippo", "type": "text", "required": true },
-    { "nome": "Email", "type": "email", "required": true },
-    { "nome": "Età", "type": "number", "required": false, "min": 1, "max" : 120 },
-    {"nome" : "Username", "type":"text", "required":false},
-    {"nome" : "campo", "type":"text", "required":false},
-    { 
-      "nome": "Sesso", 
-      "type": "select", 
-      "required": true,
-      "options": ["Maschio", "Femmina", "Altro"]
-    },
-    { 
-      "nome": "Interessi", 
-      "type": "select", 
-      "required": true,
-      "multiple": true,
-      "options": ["Musica", "Sport", "Lettura", "Cinema"]
-    }
-  ]
-}
+    "title": "aiao",
+    "campi": [
+      { "nome": "Pippo", "type": "text", "required": true },
+      { "nome": "Email", "type": "email", "required": true },
+      { "nome": "Età", "type": "number", "required": false, "min": 1, "max" : 120 },
+      {"nome" : "Username", "type":"text", "required":false},
+      {"nome" : "campo", "type":"text", "required":false},
+      { 
+        "nome": "Sesso", 
+        "type": "select", 
+        "required": true,
+        "options": ["Maschio", "Femmina", "Altro"]
+      },
+      { 
+        "nome": "Interessi", 
+        "type": "checkbox", 
+        "options": ["Musica", "Sport", "Lettura", "Cinema"]
+      }
+    ]
+  }
         </pre>
 
-        <form action="/createForm" name="create-form" method="post">
+       <!-- <form action="/createForm" name="create-form" method="post">
             <textarea id="jsonForm" class="text" cols="40" rows="10" name="jsonForm"></textarea>
             <input type="submit" value="Crea Form" class="submitButton">
-        </form>
+        </form> -->
 
         <form action="/createFormFile" name="create-form-file"  method="post">
             <label for="selezionaFile">Scegli un file JSON:</label>
