rendering dell'errore su index - rimosso redirect

--- a/dynamic-form-2-il-ritorno/public/css/index-style.css
+++ b/dynamic-form-2-il-ritorno/public/css/index-style.css
@@ -55,3 +55,12 @@ textarea {
   form {
     margin-left: 10px;
   }
+
+  fieldset {
+    width: 50%;
+  }
+
+  #error {
+    color: red;
+    font-weight: 400;
+  }
