--- a/dynamic-form-2-il-ritorno/templates/views/index.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/index.hbs
@@ -44,6 +44,7 @@
             </select>
             <input type="submit" value="Crea Form" class="submitButton">
         </form>
+        <p id="error">{{error}}</p>
         <script src="js/home.js"></script>
     </body>
 </html>
