--- a/dynamic-form-2-il-ritorno/templates/partials/checkbox.hbs
+++ b/dynamic-form-2-il-ritorno/templates/partials/checkbox.hbs
@@ -1,5 +1,5 @@
 <div class="checkbox">
-    <h2>{{nome}}</h2>
+    <p>{{nome}}</p>
     <fieldset>
     {{#each options}}
     <input type="checkbox" name="{{../nome}}[]" value = "{{this}}" />
