--- a/dynamic-form-2-il-ritorno/templates/views/index.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/index.hbs
@@ -33,10 +33,10 @@
   }
         </pre>
 
-       <!-- <form action="/createForm" name="create-form" method="post">
+       <form action="/createForm" name="create-form" method="post">
             <textarea id="jsonForm" class="text" cols="40" rows="10" name="jsonForm"></textarea>
             <input type="submit" value="Crea Form" class="submitButton">
-        </form> -->
+        </form>
 
         <form action="/createFormFile" name="create-form-file"  method="post">
             <label for="selezionaFile">Scegli un file JSON:</label>
