--- a/dynamic-form-2-il-ritorno/templates/views/index.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/index.hbs
@@ -8,6 +8,8 @@
         <ul>
           <li>I campi <i>title</i> e <i>campi</i> sono obbligatori</li>
           <li>I campi <i>nome</i> e <i>type</i> per ogni elemento sono obbligatori</li>
+          <li>Utilizzare come type <i>select</i> se si richiede una singola scelta tra più opzioni</li>
+          <li>Utilizzare come type <i>checkbox</i> se si richiedono scelte multiple</li>
         </ul>
         <pre>
 {
