--- a/dynamic-form-2-il-ritorno/templates/views/success.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/success.hbs
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="/css/index-style.css">
     </head>
     <body>
-        <h1>Form generato con successo!</h1>
+        <h1>Dati salvati con successo!</h1>
         <script src="js/success.js"></script>
     </body>
 </html>
