--- a/dynamic-form-2-il-ritorno/public/css/index-style.css
+++ b/dynamic-form-2-il-ritorno/public/css/index-style.css
@@ -1,9 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap');
+
 html, body {
     height: 100%;
 }
 
 html {
     margin: auto;
+}
+
+textarea {
+  font-family: "Roboto Mono", monospace;
+  font-weight: 400;
+  font-size: 10pt;
+  line-height: 150%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  padding: 15px;
+  z-index: 2;
+  overflow-x: auto;
+  overflow-y: scroll;
+  white-space: nowrap;
+  background-color: rgba(0,0,0,0);
+    color: rgba(0,0,0,0);
+    caret-color: white;
 }
 
 body{
@@ -36,21 +58,14 @@ h1 {
     margin-top: 4px;
 }
 
-pre {
+#example {
     background-color: black;
     white-space: pre-wrap;
     color :#ccc;
     width: 60%;
 }
 
-textarea {
-    width: 60%;
-    height: 150px;
-    padding: 12px 20px;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-  }
+
 
   form {
     margin-left: 10px;
@@ -64,3 +79,39 @@ textarea {
     color: red;
     font-weight: 400;
   }
+
+
+
+  #coder {
+    height: 600px;
+    width: 900px;
+    overflow: hidden;
+    border: 1px solid #a5a5a5;
+    position: relative;
+  }
+
+  #preCode {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    background: #1b1b1b;
+}
+
+    #preCode code {
+        padding: 15px;
+        height: calc(100% - 30px);
+        width: calc(100% - 30px);
+        font-family: "Roboto Mono", monospace;
+        font-weight: 400;
+        font-size: 10pt;
+        line-height: 150%;
+        overflow-y: scroll;
+        overflow-x: auto;
+    }
+  
+  
