--- a/dynamic-form-2-il-ritorno/templates/views/index.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/index.hbs
@@ -15,12 +15,12 @@
         </ul>
         <pre id="example"><code class="language-json">
 {
-    "title": "aiao",
+    "title": "FormBase",
     "campi": [
       { "nome": "Pippo", "type": "text", "required": true },
       { "nome": "Email", "type": "email", "required": true },
       { "nome": "Età", "type": "number", "required": false, "min": 1, "max" : 120 },
-      {"nome" : "Username", "type":"text", "required":false},
+      {"nome" : "Username", "type":"text", "required": false},
       {"nome" : "campo", "type":"text", "required":false},
       { 
         "nome": "Sesso", 
