--- a/dynamic-form-2-il-ritorno/templates/views/dynamicForm.hbs
+++ b/dynamic-form-2-il-ritorno/templates/views/dynamicForm.hbs
@@ -4,13 +4,14 @@
     </head>
     <body>
         <h1>{{title}}</h1>
-        <form action="/submit" name="form" method="post">
+        <form action="/submit" name="form" method="post" enctype="multipart/form-data">
             {{#each campi}}
                 {{#if (eqSelect type)}}
                     {{>select}}
                 {{else}}
                     {{#if (eqCheck type)}}
                         {{>checkbox}}
+                        
                     {{else}}
                     {{>input}}
                     {{/if}}
